tests/rosetta/transpiler/Scala/dijkstras-algorithm.error
exit status 1
/workspace/mochi/tests/rosetta/transpiler/Scala/dijkstras-algorithm.scala:59: error: type mismatch;
 found   : (String, scala.math.BigInt)
 required: String
    dist.update(v, INF)
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/dijkstras-algorithm.scala:60: error: type mismatch;
 found   : (String, scala.math.BigInt)
 required: String
    prev.update(v, "")
                ^
/workspace/mochi/tests/rosetta/transpiler/Scala/dijkstras-algorithm.scala:80: error: value foreach is not a member of scala.math.BigInt
    for (v <- graph(u)("keys")) {
                      ^
three errors found
